<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
      	android:orientation="vertical" 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"   		  	
  		>  		  		
		<LinearLayout		    
		    android:layout_width="match_parent"
		    android:id="@+id/Control"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/header"
		    android:orientation="vertical"
		    android:padding="10dip" >

		    <TextView
		        android:id="@+id/lbllat"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblUsername"
		        android:textColor="#000000" />
		    
		    <TextView
		        android:id="@+id/lbllang"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblPassword"
		        android:textColor="#000000"/>
		    
	    <RelativeLayout  		    
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"		    		    
		    android:orientation="horizontal"
		    android:padding="10dip"	
		    android:gravity="center_horizontal"	     
		    >

		    <Button
		        android:id="@+id/btnCancel"
		        android:layout_width="107dp"
		        android:layout_height="30dp"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"		        
		        android:background="@drawable/button_background"
		        android:text="@string/lblCancel"
		        android:textColor="#DAA520" />		   

  				      		  		   
  		</RelativeLayout>
	</LinearLayout>
			
  </RelativeLayout>
</ScrollView>
