<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
      	android:orientation="vertical" 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"   		  	
  		android:background="@drawable/bg_logo">  		
  		<LinearLayout
  		    android:id="@+id/header"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:paddingBottom="5dip"
  		    android:paddingTop="100dip"
  		    android:orientation="horizontal">
  		</LinearLayout>		  		
		<LinearLayout		    
		    android:layout_width="match_parent"
		    android:id="@+id/Control"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/header"
		    android:orientation="vertical"
		    android:padding="10dip" >

		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblChangePassword"
		        android:textColor="#ffffff" />

		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="0dp"
		        android:layout_marginBottom="20dip"
		        android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"
		        android:layout_marginTop="5dip"
		        android:layout_weight="1"
		        android:singleLine="true"
		        android:inputType="textPassword"
		        android:background="@drawable/border"
		        android:textColor="#DEB887"
		        android:id="@+id/txtChangePassword"
		        >						      
		    </EditText>

		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lblRetypePassword"
		        android:textColor="#ffffff" />

		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"
		        android:layout_marginBottom="10dip"
		        android:inputType="textPassword"
		        android:singleLine="true"		        
		        android:background="@drawable/border"
		        android:textColor="#DEB887"
		        android:id="@+id/txtRetypePassword"
		        />

		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"		        
		        android:orientation="horizontal"
		        android:padding="10dip" >

		        <Button
		            android:id="@+id/btnLogin"
		            android:layout_width="107dp"
		            android:layout_height="30dp"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="5dp"
		            android:background="@drawable/button_background"
		            android:text="@string/lblSubmit"
		            android:textColor="#DAA520" />

		    </RelativeLayout>

	</LinearLayout>
			
  </RelativeLayout>
</ScrollView>
